--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <title>ページ</title>
 
-<link rel="icon" href="https://64.media.tumblr.com/e4eefdddaac37ce9d4c9fb8bea05f5f3/11c93204d8b3c73c-c7/s1280x1920/a383c00bbc9c523fb659e553738aa91a11713cd7.jpg" type="image/icon type">
+<link rel="icon" href="https://i.pinimg.com/originals/21/1d/2c/211d2ccefaca7faa83f1ef0541dc1ddb.jpg" type="image/icon type">
 <link rel="stylesheet" href="style.css">
 
 <body>
   <div class="div1">
-    <a href="https://kuvshinov_ilya.artstation.com/" target="_blank"><img class="kep kep_keret kep_link" src="https://c-ssl.dtstatic.com/uploads/blog/202208/11/20220811030520_85a1b.thumb.1000_0.jpeg"></a>
+    <a href="https://www.duitang.com/blog/?id=1418416664" target="_blank"><img class="kep kep_keret kep_link" src="https://c-ssl.dtstatic.com/uploads/blog/202208/11/20220811030520_85a1b.thumb.1000_0.jpeg"></a>
   </div>
   <div class="div1">
     <form action="https://google.com/" method="GET" target="_blank">
